packages/react-components/src/components/chip/chip.module.css
@layer components {
  .Chip {
    font: unset;
    padding: 0 token(--space-8);
    border-radius: 1e5px;
    font-size: token(--font-size-16);
    block-size: token(--space-24);

    &:where(button) {
      appearance: none;
      border: 0;
      cursor: pointer;
    }

    &[data-chip-dimension='small'] {
      block-size: token(--space-16);
      font-size: token(--font-size-14);
      padding: 10px token(--space-8);
    }

    &[data-chip-dimension='big'] {
      font-size: token(--font-size-18);
      block-size: token(--space-32);
    }

    &[data-chip-color='brand'] {
      background-color: var(--highlight-brand-background);
      color: var(--highlight-brand-foreground);
    }

    &[data-chip-color='gray'] {
      background-color: var(--highlight-gray-background);
      color: var(--highlight-gray-foreground);
    }

    &[data-chip-color='cyan'] {
      background-color: var(--highlight-cyan-background);
      color: var(--highlight-cyan-foreground);
    }

    &[data-chip-color='green'] {
      background-color: var(--highlight-green-background);
      color: var(--highlight-green-foreground);
    }

    &[data-chip-color='purple'] {
      background-color: var(--highlight-purple-background);
      color: var(--highlight-purple-foreground);
    }

    &[data-chip-color='yellow'] {
      background-color: var(--highlight-yellow-background);
      color: var(--highlight-yellow-foreground);
    }

    &[data-chip-color='red'] {
      background-color: var(--highlight-red-background);
      color: var(--highlight-red-foreground);
    }

    &[data-chip-color='blue'] {
      background-color: var(--highlight-blue-background);
      color: var(--highlight-blue-foreground);
    }
  }

  .Action {
    display: inline-flex;
    appearance: none;
    border: 0;
    background: none;
    padding: 0;
    color: inherit;
    font: inherit;
    margin-top: 1px;
    cursor: pointer;
  }
}

